--- a/projects/kit/src/lib/component/indicator/spinner/spinner.component.scss
+++ b/projects/kit/src/lib/component/indicator/spinner/spinner.component.scss
@@ -1,6 +1,6 @@
 .kt-spinner {
     position: relative;
-    color: var(--kt-color-primary);
+    color: var(--kt-color-brand);
     background-color: #c4000000;
     -webkit-mask-image: linear-gradient(transparent 50%, white 50%),
         linear-gradient(to right, transparent 50%, white 50%);
