--- a/projects/kit/src/lib/component/action/icon-button/icon-button.component.html
+++ b/projects/kit/src/lib/component/action/icon-button/icon-button.component.html
@@ -1,6 +1,8 @@
 <button
     type="button"
-    class="kt-icon-button kt-icon-button--shape-{{ shape }} kt-icon-button--variant-{{ variant }}"
+    class="kt-icon-button kt-icon-button--size-{{ size }} kt-icon-button--shape-{{ shape }} kt-icon-button--variant-{{
+        variant
+    }}"
     (click)="onTap.emit($event)"
 >
     <kt-icon [name]="icon"></kt-icon>
