--- a/projects/kit/src/lib/component/action/icon-button/icon-button.component.scss
+++ b/projects/kit/src/lib/component/action/icon-button/icon-button.component.scss
@@ -4,7 +4,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0.875rem;
     border: 1px solid;
     cursor: pointer;
 
@@ -19,6 +18,20 @@
 
         &-none {
             border-radius: 0;
+        }
+    }
+
+    &--size {
+        &-small {
+            padding: 0.5rem;
+        }
+
+        &-medium {
+            padding: 0.75rem;
+        }
+
+        &-large {
+            padding: 1rem;
         }
     }
 
