--- a/projects/kit/src/lib/component/form/text-field/text-field.component.scss
+++ b/projects/kit/src/lib/component/form/text-field/text-field.component.scss
@@ -43,6 +43,15 @@
         }
     }
 
+    &-action {
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        display: flex;
+        align-items: center;
+    }
+
     &-hint {
         margin-top: 0.1rem;
         color: var(--kt-color-text);
