--- a/projects/kit/src/lib/component/form/select/select.component.html
+++ b/projects/kit/src/lib/component/form/select/select.component.html
@@ -1,1 +1,24 @@
-<p>select works!</p>
+<div class="kt-form-field">
+    <label class="kt-form-field-label" [for]="name">
+        <ng-content></ng-content>
+        <span class="kt-form-field-label-required" *ngIf="isRequired">*</span>
+    </label>
+    <div class="kt-form-field-wrapper">
+        <select
+            class="kt-form-field-select"
+            [class.kt-text-field-select--invalid]="isInvalid"
+            [id]="name"
+            [formControl]="control"
+        >
+            <ng-content select="option"></ng-content>
+        </select>
+    </div>
+    <span class="kt-form-field-hint" [class.kt-form-field-hint--invalid]="isInvalid" *ngIf="hint || isInvalid">
+        <ng-container *ngIf="isInvalid; else hintTemplate">
+            {{ errorKey }}
+        </ng-container>
+        <ng-template #hintTemplate>
+            {{ hint }}
+        </ng-template>
+    </span>
+</div>
