:boom: change everything

--- a/projects/kit/src/lib/component/action/icon-button/icon-button.component.html
+++ b/projects/kit/src/lib/component/action/icon-button/icon-button.component.html
@@ -5,5 +5,5 @@
     }}"
     (click)="onTap.emit($event)"
 >
-    <kt-icon [name]="icon"></kt-icon>
+    <kt-icon class="kt-icon-button-icon" [name]="icon"></kt-icon>
 </button>
