--- a/projects/kit/styles/_color.scss
+++ b/projects/kit/styles/_color.scss
@@ -1,7 +1,7 @@
 :root {
     --kt-color-brand: #5162ff;
     --kt-color-brand-contrast: #ffffff;
-    --kt-color-card: #9ca3afff;
+    --kt-color-card: #9ca3af;
     --kt-color-title: #0e0e0e;
     --kt-color-text: #191919;
     --kt-color-border: #8c96a2;
