--- a/projects/kit/styles/component/action/_icon-button.scss
+++ b/projects/kit/styles/component/action/_icon-button.scss
@@ -1,23 +1,11 @@
-.kt-button {
+.kt-icon-button {
     position: relative;
     appearance: none;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 0.5rem;
-    padding: 0.875rem 1.5rem;
     border: 1px solid;
     cursor: pointer;
-    text-transform: none;
-    text-overflow: ellipsis;
-    font-weight: 600;
-    font-size: 1rem;
-    white-space: nowrap;
-
-    &:disabled {
-        cursor: not-allowed;
-        opacity: 0.38;
-    }
 
     &--shape {
         &-rounded {
@@ -30,6 +18,20 @@
 
         &-none {
             border-radius: 0;
+        }
+    }
+
+    &--size {
+        &-small {
+            padding: 0.5rem;
+        }
+
+        &-medium {
+            padding: 0.75rem;
+        }
+
+        &-large {
+            padding: 1rem;
         }
     }
 
@@ -53,12 +55,8 @@
         }
     }
 
-    &-spinner {
-        position: absolute;
-        z-index: 10;
-        inset: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    &-icon {
+        height: 24px;
+        width: 24px;
     }
 }
